--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         padding:0;
         height:100%;
         width:100%;
-        overflow:hidden;
         font-family:sans-serif;
     }
     #map{
@@ -38,7 +37,7 @@
         border:none;
         background:white;
         box-shadow:0 2px 6px rgba(0,0,0,0.3);
-        font-size:20px;
+        font-size:18px;
         cursor:pointer;
     }
 
@@ -46,7 +45,7 @@
         transform:scale(.9);
     }
 
-    /* Marcador de localização customizado */
+    /* Marcador da localização */
     .location-marker {
         width: 20px;
         height: 20px;
@@ -69,24 +68,17 @@
         border-radius: 50%;
     }
 
-    /* Animação de pulso */
+    /* Animação */
     @keyframes pulse {
-        0% {
-            box-shadow: 0 0 0 0 rgba(66, 133, 244, 0.7);
-        }
-        70% {
-            box-shadow: 0 0 0 10px rgba(66, 133, 244, 0);
-        }
-        100% {
-            box-shadow: 0 0 0 0 rgba(66, 133, 244, 0);
-        }
+        0% { box-shadow: 0 0 0 0 rgba(66,133,244,0.7); }
+        70% { box-shadow: 0 0 0 10px rgba(66,133,244,0); }
+        100% { box-shadow: 0 0 0 0 rgba(66,133,244,0); }
     }
 
     .location-marker.active {
         animation: pulse 2s infinite;
     }
 
-    /* Responsividade Mobile */
     @media (max-width: 768px) {
         .map-control {
             top: 70px;
@@ -96,7 +88,7 @@
         .control-btn {
             width: 44px;
             height: 44px;
-            font-size: 18px;
+            font-size: 16px;
         }
     }
 </style>
@@ -116,6 +108,11 @@
     const SUPABASE_URL = "https://fufteldeapyvluynppuv.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ1ZnRlbGRlYXB5dmx1eW5wcHV2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ2MzAyMzIsImV4cCI6MjA4MDIwNjIzMn0.xr6PiskP8cJUzGBEhp_tAfZWMprxJXJyhLuOSmCQleA";
 
+    /* Recomendação de segurança:
+       - Ativar RLS no supabase
+       - Restringir permissões
+       - Idealmente retirar operações críticas do frontend
+    */
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 </script>
 
@@ -127,11 +124,12 @@ let map;
 let is3D = false;
 let userLocationMarker = null;
 let watchId = null;
+let _animating3D = false;
 
 const MAP_ID = "ebb7ca4503045feabc75b373";
 
-function initMap(){
-    map = new google.maps.Map(document.getElementById("map"),{
+window.initMap = function () {
+    map = new google.maps.Map(document.getElementById("map"), {
         center:{lat:-23.5505,lng:-46.6333},
         zoom:17,
         mapId:MAP_ID,
@@ -144,56 +142,46 @@ function initMap(){
         fullscreenControl:true
     });
 
-    // Iniciar rastreamento de localização em tempo real
     startLocationTracking();
 }
 
 /* ===========================
-   RASTREAMENTO DE LOCALIZAÇÃO EM TEMPO REAL
+   RASTREAMENTO EM TEMPO REAL
    =========================== */
 
 function startLocationTracking() {
     if (!navigator.geolocation) {
-        console.error("Geolocalização não suportada pelo navegador");
+        alert("Seu navegador não suporta geolocalização.");
         return;
     }
 
-    // Criar marcador customizado
     const markerDiv = document.createElement('div');
     markerDiv.className = 'location-marker active';
 
-    // Opções de geolocalização
     const geoOptions = {
         enableHighAccuracy: true,
-        timeout: 5000,
+        timeout: 7000,
         maximumAge: 0
     };
 
-    // Primeira posição para centralizar o mapa
     navigator.geolocation.getCurrentPosition(
-        position => {
-            const pos = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude
-            };
+        pos => {
+            const c = { lat: pos.coords.latitude, lng: pos.coords.longitude };
 
-            // Centralizar mapa na localização atual
-            map.setCenter(pos);
+            map.setCenter(c);
             map.setZoom(17);
 
-            // Criar marcador avançado
-            if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
+            if (google.maps.marker?.AdvancedMarkerElement) {
                 userLocationMarker = new google.maps.marker.AdvancedMarkerElement({
-                    map: map,
-                    position: pos,
+                    map,
+                    position: c,
                     content: markerDiv,
                     title: "Sua Localização"
                 });
             } else {
-                // Fallback para marcador padrão
                 userLocationMarker = new google.maps.Marker({
-                    map: map,
-                    position: pos,
+                    map,
+                    position: c,
                     title: "Sua Localização",
                     icon: {
                         path: google.maps.SymbolPath.CIRCLE,
@@ -206,37 +194,38 @@ function startLocationTracking() {
                 });
             }
 
-            // Iniciar watchPosition para atualizar em tempo real
-            watchId = navigator.geolocation.watchPosition(
-                position => {
-                    updateUserLocation(position);
-                },
-                error => {
-                    console.error("Erro ao rastrear localização:", error);
-                },
-                geoOptions
-            );
+            watchId = navigator.geolocation.watchPosition(updateUserLocation, handleGeoError, geoOptions);
         },
-        error => {
-            console.error("Erro ao obter localização inicial:", error);
-        },
+        handleGeoError,
         geoOptions
     );
 }
 
 function updateUserLocation(position) {
-    const newPos = {
-        lat: position.coords.latitude,
-        lng: position.coords.longitude
-    };
+    const newPos = new google.maps.LatLng(
+        position.coords.latitude,
+        position.coords.longitude
+    );
 
-    if (userLocationMarker) {
+    if (!userLocationMarker) return;
+
+    if (userLocationMarker.setPosition) {
+        userLocationMarker.setPosition(newPos);
+    } else {
         userLocationMarker.position = newPos;
     }
 }
 
+function handleGeoError(error) {
+    console.warn("Erro de geolocalização:", error);
+
+    alert("Não foi possível acessar a localização. Ative o GPS e recarregue.");
+
+    map.setCenter({ lat:-23.5505, lng:-46.6333 });
+}
+
 /* ===========================
-   ANIMAÇÃO SUAVE 2D ⇄ 3D
+   ANIMAÇÃO 2D ⇄ 3D
    =========================== */
 
 function animateValue(start, end, duration, onUpdate, onFinish){
@@ -250,37 +239,41 @@ function animateValue(start, end, duration, onUpdate, onFinish){
 
         if(progress < 1){
             requestAnimationFrame(frame);
-        } else if(onFinish){
-            onFinish();
+        } else {
+            if (onFinish) onFinish();
         }
     }
 
     requestAnimationFrame(frame);
 }
 
-document.getElementById("btnToggle3D").onclick = ()=>{
+document.getElementById("btnToggle3D").onclick = () => {
 
-    if(!is3D){
+    if (_animating3D) return;
+    _animating3D = true;
+
+    if (!is3D) {
         is3D = true;
-        document.getElementById("btnToggle3D").textContent = "2D";
+        btnToggle3D.textContent = "2D";
 
         animateValue(map.getTilt(), 67, 600, val => map.setTilt(val));
-        animateValue(map.getHeading(), 45, 600, val => map.setHeading(val));
+        animateValue(map.getHeading(), 45, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
+        });
 
     } else {
         is3D = false;
-        document.getElementById("btnToggle3D").textContent = "3D";
+        btnToggle3D.textContent = "3D";
 
         animateValue(map.getTilt(), 0, 600, val => map.setTilt(val));
-        animateValue(map.getHeading(), 0, 600, val => map.setHeading(val));
+        animateValue(map.getHeading(), 0, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
+        });
     }
 };
 
-// Limpar watch ao fechar a página
 window.addEventListener('beforeunload', () => {
-    if (watchId) {
-        navigator.geolocation.clearWatch(watchId);
-    }
+    if (watchId) navigator.geolocation.clearWatch(watchId);
 });
 </script>
 
